# shortcuts_uncertainty

./: README.md  main.py  pyproject.toml  root_path.py
configs/: config_mnist3.yml
shortcuts/: config.py  data.py  datamodules.py  ensemble.py  eval.py  models.py  utils.py
